--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.991612d6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f1faf8d7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2d6483ad.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5cb1c5e2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.01b1f5a0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.678e1168.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1xkcdbo = {
+					__sveltekit_4xx1xy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -22,8 +22,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.991612d6.js"),
-						import("./_app/immutable/entry/app.5cb1c5e2.js")
+						import("./_app/immutable/entry/start.f1faf8d7.js"),
+						import("./_app/immutable/entry/app.678e1168.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
