--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<title>Floboard</title>
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f4d56ca6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9cb27dc3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.618986f4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8e3442cc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.46a2b33b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1054f7ec.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_g2km1f = {
+					__sveltekit_170a0hn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -22,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f4d56ca6.js"),
-						import("./_app/immutable/entry/app.8e3442cc.js")
+						import("./_app/immutable/entry/start.9cb27dc3.js"),
+						import("./_app/immutable/entry/app.1054f7ec.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
