--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Floboard</title>
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9cb27dc3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.305091b0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.46a2b33b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1054f7ec.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3ae55b12.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6bd68eac.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_170a0hn = {
+					__sveltekit_19s4p9a = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9cb27dc3.js"),
-						import("./_app/immutable/entry/app.1054f7ec.js")
+						import("./_app/immutable/entry/start.305091b0.js"),
+						import("./_app/immutable/entry/app.6bd68eac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
